# PythonScripts

./: PythonScripts.sln
FingerPrint_Sensor_R307/: .gitignore  AdminConfiguration.py  CHANGELOG.md  FingerPrintReader.py  MANIFEST.in  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
FingerPrint_Sensor_R307/config/: config.ini.template
FingerPrint_Sensor_R307/docs/: API.md  GETTING_STARTED.md  HARDWARE_SETUP.md  INSTALLATION.md  PROJECT_SUMMARY.md  QUICK_REFERENCE.md  USAGE.md
FingerPrint_Sensor_R307/examples/: basic_usage.py  complete_workflow.py  gpio_control.py
FingerPrint_Sensor_R307/scripts/: install.bat  install.sh  setup_config.py
FingerPrint_Sensor_R307/src/fingerprint_r307/: __init__.py  __main__.py
FingerPrint_Sensor_R307/src/fingerprint_r307/admin/: __init__.py  cli.py  user_manager.py
FingerPrint_Sensor_R307/src/fingerprint_r307/core/: __init__.py  exceptions.py  sensor.py
FingerPrint_Sensor_R307/src/fingerprint_r307/reader/: __init__.py  gpio_handler.py  verifier.py
FingerPrint_Sensor_R307/src/fingerprint_r307/utils/: __init__.py  config.py  logger.py
FingerPrint_Sensor_R307/tests/: __init__.py  conftest.py  test_config.py  test_sensor.py  test_user_manager.py
FolderCrypto/: .env.example  .gitignore  README.md  config.ini.template  gui.py  pyproject.toml  requirements-dev.txt  requirements.txt  start-gui.bat  start-gui.sh
FolderCrypto/app/: __init__.py  __main__.py
FolderCrypto/app/cli/: main.py
FolderCrypto/app/core/: __init__.py  crypto_engine.py  exceptions.py  file_processor.py  key_derivation.py
FolderCrypto/app/gui/: __init__.py  main_window.py
FolderCrypto/app/services/: __init__.py  decrypt_service.py  encrypt_service.py
FolderCrypto/app/utils/: __init__.py  config.py  helpers.py  logger.py  password_input.py
FolderCrypto/docs/: ARCHITECTURE.md  GUI.md  PROJECT_SUMMARY.md  QUICKSTART.md  VISUALIZATION.md
FolderCrypto/scripts/: build-gui.bat  build-gui.sh  build.bat  build.sh  scripts.py  setup.bat  setup.sh
FolderCrypto/tests/: conftest.py  test_crypto.py  test_integration.py  test_services.py
Investment_App/etoro/: .env.example  .gitignore  README.md  create_etoro_app.py  download_instruments.py  pyproject.toml  query_instruments.py  requirements.txt
Investment_App/etoro/app/: __main__.py  main.py
Investment_App/etoro/app/api/: etoro_client.py
Investment_App/etoro/app/core/: config.py  logger.py
Investment_App/etoro/app/models/: portfolio.py
Investment_App/etoro/app/services/: analysis_service.py  portfolio_service.py
Investment_App/etoro/app/utils/: helpers.py
Investment_App/etoro/etoro_app/: __main__.py  main.py
Investment_App/etoro/etoro_app/api/: etoro_client.py
Investment_App/etoro/etoro_app/core/: config.py  logger.py
Investment_App/etoro/etoro_app/models/: watchlist.py
Investment_App/etoro/etoro_app/services/: analysis_service.py  portfolio_service.py  watchlist_service.py
Investment_App/etoro/etoro_app/utils/: helpers.py
Investment_App/etoro/tests/: __init__.py  conftest.py  test_analysis_service.py  test_models.py  test_portfolio_service.py
Investment_App/upstox/: .env.example  .gitignore  README.md  auth.bat  create_upstox_app.py  pyproject.toml  requirements.txt
Investment_App/upstox/app/: __init__.py  main.py
Investment_App/upstox/app/api/: analytics_client.py  upstox_client.py
Investment_App/upstox/app/core/: config.py  logger.py
Investment_App/upstox/app/models/: market_data.py  portfolio.py
Investment_App/upstox/app/services/: analysis_service.py  analytics_service.py  portfolio_service.py
Investment_App/upstox/app/utils/: helpers.py
Investment_App/upstox/tests/: __init__.py  conftest.py  test_analysis_service.py  test_analytics_service.py  test_portfolio_service.py
Investment_App/upstox/upstox_app/: __main__.py  main.py
Investment_App/upstox/upstox_app/api/: __init__.py  analytics_client.py  upstox_client.py
Investment_App/upstox/upstox_app/core/: __init__.py  config.py  logger.py
Investment_App/upstox/upstox_app/models/: market_data.py
Investment_App/upstox/upstox_app/services/: analysis_service.py  analytics_service.py  portfolio_service.py
Investment_App/upstox/upstox_app/utils/: helpers.py
Investment_Calc/: README.md  pyproject.toml  requirements.txt  run-web.bat  run-web.sh  run.bat
Investment_Calc/src/investcalc/: __init__.py  cli.py
Investment_Calc/src/investcalc/calculations/: __init__.py  options.py  position.py  price.py  returns.py
Investment_Calc/tests/: test_calculations.py
Investment_Calc/web/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
Investment_Calc/web/src/: main.ts
Investment_Calc/web/src/components/common/: CalcInput.vue  ResultCard.vue  StatCard.vue
Investment_Calc/web/src/components/layout/: Navbar.vue  Sidebar.vue
Investment_Calc/web/src/layouts/: DefaultLayout.vue
Investment_Calc/web/src/pages/: Dashboard.vue  History.vue  OptionsCalc.vue  PercentCalc.vue  PositionCalc.vue  PriceCalc.vue  ReturnsCalc.vue  RiskCalc.vue
Investment_Calc/web/src/router/: index.ts
Investment_Calc/web/src/stores/: historyStore.ts
Investment_Calc/web/src/styles/: main.css
Investment_Calc/web/src/types/: index.ts
Investment_Calc/web/src/utils/: calculations.ts
TwinCAT_PLC/plc_gui_project/: .gitignore  MANIFEST.in  README.md  app.py  requirements.txt  setup.cfg  setup.py
TwinCAT_PLC/plc_gui_project/resources/icons/: README.txt
TwinCAT_PLC/plc_gui_project/resources/styles/: dark.qss  light.qss
TwinCAT_PLC/plc_gui_project/src/plc_gui/: __init__.py  app_context.py  constants.py
TwinCAT_PLC/plc_gui_project/src/plc_gui/controllers/: __init__.py  app_controller.py  connection_controller.py  variable_controller.py
TwinCAT_PLC/plc_gui_project/src/plc_gui/models/: __init__.py  log_table_model.py  variable_table_model.py
TwinCAT_PLC/plc_gui_project/src/plc_gui/utils/: qt_log_handler.py  style_manager.py
TwinCAT_PLC/plc_gui_project/src/plc_gui/views/: __init__.py  about_dialog.py  connection_panel.py  log_panel.py  main_window.py  variable_panel.py  (+1 more)
(+367 files in other folders)
