[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "fingerprint-r307"
version = "1.0.0"
description = "Python interface for R307 Fingerprint Sensor Module"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
keywords = ["fingerprint", "biometric", "r307", "sensor", "hardware", "authentication"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: System :: Hardware",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Operating System :: POSIX :: Linux",
]

[project.urls]
Homepage = "https://github.com/yourusername/fingerprint-r307"
Documentation = "https://github.com/yourusername/fingerprint-r307/docs"
Repository = "https://github.com/yourusername/fingerprint-r307"
"Bug Tracker" = "https://github.com/yourusername/fingerprint-r307/issues"

[project.scripts]
fingerprint-admin = "fingerprint_r307.admin.cli:main"
fingerprint-reader = "fingerprint_r307.reader.verifier:main"

[tool.black]
line-length = 100
target-version = ['py37', 'py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=src/fingerprint_r307 --cov-report=html --cov-report=term-missing"

[tool.mypy]
python_version = "3.7"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false

[tool.pylint.messages_control]
disable = "C0330, C0326"

[tool.pylint.format]
max-line-length = "100"
