[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "investcalc"
version = "1.0.0"
description = "Stock market calculator — price, returns, risk, position sizing, options"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Sujin M", email = "f.sujin@gmail.com" }]
keywords = ["stock", "market", "calculator", "finance", "investment"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Topic :: Office/Business :: Financial",
]
dependencies = []  # pure stdlib — no external deps required

[project.optional-dependencies]
rich = ["rich>=13.0.0"]
data = ["yfinance>=0.2.0", "pandas>=2.0.0", "numpy>=1.26.0"]
dev  = ["pytest>=8.0.0", "pytest-cov>=5.0.0"]

[project.scripts]
investcalc = "investcalc.cli:run"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts   = "-v --tb=short"
