[build-system]
requires = ["setuptools>=70", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "etoro-analyzer"
version = "1.0.0"
description = "eToro investment portfolio analyzer"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.31.0",
    "urllib3>=2.0.0",
    "python-dotenv>=1.0.0",
    "typer>=0.12.0",
    "rich>=13.7.0",
]

[project.scripts]
etoro-analyzer = "app.main:app"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-mock>=3.14.0",
]

[tool.setuptools.packages.find]
# Expose both 'app' (CLI entry point) and 'etoro_app' (importable library)
where = ["."]
include = ["app*", "etoro_app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
