[metadata]
name = plc-monitor-gui
version = 1.0.0
description = PyQt6 GUI for TwinCAT 3 PLC ADS communication
long_description = file: README.md
long_description_content_type = text/markdown
author = TwinCAT Tools
license = MIT
keywords = TwinCAT, ADS, PLC, PyQt6, SCADA, HMI
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Intended Audience :: Manufacturing
    License :: OSI Approved :: MIT License
    Operating System :: Microsoft :: Windows
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
    Topic :: Scientific/Engineering :: Interface Engine/Protocol Translator

[options]
python_requires = >=3.11
package_dir =
    = src
packages = find:
include_package_data = True
install_requires =
    PyQt6>=6.6.0
    pyads>=3.0.0

[options.packages.find]
where = src

[options.package_data]
plc_gui =
    resources/styles/*.qss

[options.entry_points]
console_scripts =
    plcmonitor = plc_gui.app:main

[tool:pytest]
testpaths = tests
addopts = -v --tb=short

[flake8]
max-line-length = 120
exclude =
    .venv,
    __pycache__,
    build,
    dist

[mypy]
python_version = 3.11
warn_return_any = True
warn_unused_configs = True
ignore_missing_imports = True
